[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/player/idle/lilguy_idle.png" type="Texture" id=1]
[ext_resource path="res://Scripts/player.gd" type="Script" id=2]
[ext_resource path="res://Scenes/cards.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/environment/light2.png" type="Texture" id=4]
[ext_resource path="res://Assets/audio/sound_effects/170148__timgormly__8-bit-hurt1.mp3" type="AudioStream" id=5]
[ext_resource path="res://Assets/audio/sound_effects/170163__timgormly__8-bit-jump1.mp3" type="AudioStream" id=6]
[ext_resource path="res://Scenes/pause_menu.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 23 )

[sub_resource type="Shader" id=10]
code = "shader_type canvas_item;

uniform vec4 flash_color : hint_color = vec4(1.0);
uniform float flash_modifier : hint_range(0.0,1.0) = 0.0;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	color.rgb = mix(color.rgb, flash_color.rgb, flash_modifier);
	COLOR = color;
	
}"

[sub_resource type="ShaderMaterial" id=11]
shader = SubResource( 10 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 1.0

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 10.5, 29.5 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 13.5, 31 )

[sub_resource type="Animation" id=12]
resource_name = "Damage"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:material:shader_param/flash_modifier")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.137788, 0.182271, 0.21482, 0.237604, 0.347183, 0.363457 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 0.0, 0.0, 1.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "FoolH"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0509925, 0.186611, 0.239773, 0.291851 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23, 24 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerSprite/AttackHit/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.186611, 0.354778 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PlayerSprite/AttackHit/CollisionShape2D:shape:extents")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 10.5, 29.5 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PlayerSprite:material:shader_param/flash_modifier")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.399261, 0.800691 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerSprite:material:shader_param/flash_modifier")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerSprite/AttackHit/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("PlayerSprite/AttackHit/CollisionShape2D:shape:extents")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 10.5, 29.5 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("PlayerSprite:material:shader_param/flash_modifier")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Walk"
step = 0.04
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.0423129, 0.159487, 0.282086, 0.399261, 0.52186, 0.641204, 0.759463, 0.878807, 0.999237 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 9, 11, 15, 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerSprite:material:shader_param/flash_modifier")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "WalkDown"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.247368 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 18, 19 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerSprite:material:shader_param/flash_modifier")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "WalkUp"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.262557 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerSprite:material:shader_param/flash_modifier")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["hurtbox"]]
position = Vector2( 1, 7 )
shape = SubResource( 1 )

[node name="PlayerSprite" type="Sprite" parent="."]
material = SubResource( 11 )
texture = ExtResource( 1 )
hframes = 18
vframes = 2
frame = 6

[node name="AttackHit" type="Area2D" parent="PlayerSprite" groups=["hitbox"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerSprite/AttackHit"]
position = Vector2( 23, -0.5 )
shape = SubResource( 8 )
disabled = true

[node name="PlayerHurtbox" type="Area2D" parent="PlayerSprite" groups=["hurtbox"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerSprite/PlayerHurtbox"]
shape = SubResource( 9 )

[node name="PlayerCamera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.75, 0.75 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Damage = SubResource( 12 )
anims/FoolH = SubResource( 6 )
anims/Idle = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/Walk = SubResource( 4 )
anims/WalkDown = SubResource( 7 )
anims/WalkUp = SubResource( 5 )

[node name="PlayUI" parent="." instance=ExtResource( 3 )]

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 8, 0 )
texture = ExtResource( 4 )
texture_scale = 3.94
energy = 0.25
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )

[node name="PauseMenu" parent="." instance=ExtResource( 7 )]
visible = false
margin_left = -383.0
margin_top = -224.0
margin_right = -383.0
margin_bottom = -224.0

[node name="PlayerAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="CollectAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[connection signal="area_entered" from="PlayerSprite/AttackHit" to="." method="_on_AttackHit_area_entered"]
